# partzilla

./: .npmignore  Cargo.toml  README.md  bun.lockb  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml
lib/: partzilla.d.ts  partzilla.js  partzilla.ts  read.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  multipart.rs  multipart_parser.rs  utils.rs
tests/: get_parts.test.ts  stream.test.ts
tests/utils/: request.ts
