[package]
edition = "2021"
name = "partzilla"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.30", default-features = false, features = ["web_stream"] }
napi-derive = "3.0.0-alpha.26"
bytes = "1.10"
futures = "0.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
